updated graphics ui and fixed spectrogram timer creation bug

--- a/visuals/GUI_BASE.ui
+++ b/visuals/GUI_BASE.ui
@@ -5808,6 +5808,12 @@ QPushButton:pressed {
                           </item>
                           <item>
                            <widget class="QFrame" name="frame_interactions_btns">
+                            <property name="minimumSize">
+                             <size>
+                              <width>180</width>
+                              <height>0</height>
+                             </size>
+                            </property>
                             <property name="maximumSize">
                              <size>
                               <width>150</width>
@@ -5830,12 +5836,18 @@ QPushButton:pressed {
                              <item>
                               <widget class="QComboBox" name="receptor_node"/>
                              </item>
-                             <item>
+                             <item alignment="Qt::AlignHCenter">
                               <widget class="QPushButton" name="start_btn">
                                <property name="minimumSize">
                                 <size>
-                                 <width>65</width>
+                                 <width>100</width>
                                  <height>30</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>100</width>
+                                 <height>16777215</height>
                                 </size>
                                </property>
                                <property name="font">
@@ -5866,12 +5878,18 @@ QPushButton:pressed {
                                </property>
                               </widget>
                              </item>
-                             <item>
+                             <item alignment="Qt::AlignHCenter">
                               <widget class="QPushButton" name="stop_btn">
                                <property name="minimumSize">
                                 <size>
-                                 <width>65</width>
+                                 <width>100</width>
                                  <height>30</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>100</width>
+                                 <height>16777215</height>
                                 </size>
                                </property>
                                <property name="font">
@@ -5902,48 +5920,18 @@ QPushButton:pressed {
                                </property>
                               </widget>
                              </item>
-                             <item>
-                              <widget class="QPushButton" name="reset_btn">
-                               <property name="minimumSize">
-                                <size>
-                                 <width>65</width>
-                                 <height>30</height>
-                                </size>
-                               </property>
-                               <property name="font">
-                                <font>
-                                 <family>Segoe UI Semibold</family>
-                                 <pointsize>10</pointsize>
-                                 <weight>75</weight>
-                                 <bold>true</bold>
-                                </font>
-                               </property>
-                               <property name="styleSheet">
-                                <string notr="true">QPushButton {
-	border: 2px solid rgb(50, 50, 51);
-	border-radius: 5px;	
-	background-color: rgb(50, 50, 51);
-}
-QPushButton:hover {
-	background-color: rgb(56, 56, 57);
-	border: 2px solid rgb(56, 56, 57);
-}
-QPushButton:pressed {	
-	background-color: rgb(56, 56, 57);
-	border: 1px solid rgb(0, 122, 204);
-}</string>
-                               </property>
-                               <property name="text">
-                                <string>Restablecer</string>
-                               </property>
-                              </widget>
-                             </item>
-                             <item>
+                             <item alignment="Qt::AlignHCenter">
                               <widget class="QPushButton" name="save_btn">
                                <property name="minimumSize">
                                 <size>
-                                 <width>65</width>
+                                 <width>100</width>
                                  <height>30</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>100</width>
+                                 <height>16777215</height>
                                 </size>
                                </property>
                                <property name="font">
