updated login window title

--- a/visuals/ui_login.ui
+++ b/visuals/ui_login.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>HEATS-BOARD</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: rgb(44, 49, 60);</string>
