--- a/visuals/ui_login.ui
+++ b/visuals/ui_login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>350</width>
-    <height>300</height>
+    <width>500</width>
+    <height>350</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -18,7 +18,7 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>400</width>
+    <width>500</width>
     <height>350</height>
    </size>
   </property>
@@ -26,14 +26,14 @@
    <string>HEATS-BOARD</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(44, 49, 60);</string>
+   <string notr="true">background-color: rgb(24, 26, 33);</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QFrame" name="bg">
      <property name="styleSheet">
       <string notr="true">/* LINE EDIT */
-background-color: rgb(44, 49, 60);
+background-color: rgb(24, 26, 33);
 color: rgb(85, 170, 255);
 QLineEdit {
 	background-color: rgb(27, 29, 35);
@@ -266,7 +266,10 @@ QSlider::handle:vertical:pressed {
           <widget class="QLabel" name="label_user">
            <property name="font">
             <font>
-             <pointsize>9</pointsize>
+             <family>Segoe UI Semibold</family>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -279,26 +282,31 @@ QSlider::handle:vertical:pressed {
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>25</height>
+             <height>40</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>25</height>
+             <height>40</height>
             </size>
            </property>
            <property name="font">
             <font>
-             <pointsize>9</pointsize>
+             <family>Segoe UI Semibold</family>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <italic>false</italic>
+             <bold>true</bold>
             </font>
            </property>
            <property name="styleSheet">
             <string notr="true">QLineEdit {
-	background-color: rgb(27, 29, 35);
+	background-color: rgb(50, 53, 60);
 	border-radius: 5px;
 	border: 2px solid rgb(27, 29, 35);
 	padding-left: 10px;
+	color: rgb(235, 235, 235);
 }
 QLineEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
@@ -313,7 +321,10 @@ QLineEdit:focus {
           <widget class="QLabel" name="label_password">
            <property name="font">
             <font>
-             <pointsize>9</pointsize>
+             <family>Segoe UI Semibold</family>
+             <pointsize>10</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -326,26 +337,27 @@ QLineEdit:focus {
            <property name="minimumSize">
             <size>
              <width>0</width>
-             <height>25</height>
+             <height>40</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>25</height>
+             <height>40</height>
             </size>
            </property>
            <property name="font">
             <font>
-             <pointsize>9</pointsize>
+             <pointsize>10</pointsize>
             </font>
            </property>
            <property name="styleSheet">
             <string notr="true">QLineEdit {
-	background-color: rgb(27, 29, 35);
+	background-color: rgb(50, 53, 60);
 	border-radius: 5px;
 	border: 2px solid rgb(27, 29, 35);
 	padding-left: 10px;
+	color: rgb(235, 235, 235);
 }
 QLineEdit:hover {
 	border: 2px solid rgb(64, 71, 88);
@@ -363,19 +375,6 @@ QLineEdit:focus {
        </widget>
       </item>
       <item>
-       <spacer name="verticalSpacer">
-        <property name="orientation">
-         <enum>Qt::Vertical</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>20</width>
-          <height>33</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="QFrame" name="buttons_frame">
         <property name="frameShape">
          <enum>QFrame::StyledPanel</enum>
@@ -384,94 +383,52 @@ QLineEdit:focus {
          <enum>QFrame::Raised</enum>
         </property>
         <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <spacer name="horizontalSpacer">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>77</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
+         <item alignment="Qt::AlignHCenter">
           <widget class="QPushButton" name="accept_button">
            <property name="minimumSize">
             <size>
-             <width>80</width>
-             <height>30</height>
+             <width>180</width>
+             <height>50</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
-             <width>80</width>
-             <height>30</height>
+             <width>180</width>
+             <height>50</height>
             </size>
            </property>
            <property name="font">
             <font>
-             <pointsize>9</pointsize>
+             <family>Segoe UI Semibold</family>
+             <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
+           </property>
+           <property name="focusPolicy">
+            <enum>Qt::NoFocus</enum>
            </property>
            <property name="styleSheet">
             <string notr="true">QPushButton {
-	border: 2px solid rgb(52, 59, 72);
+	border: 2px solid rgb(23, 145, 239);
 	border-radius: 5px;	
-	background-color: rgb(52, 59, 72);
+	background-color: rgb(23, 145, 239);
+	color: rgb(245, 245, 245);
 }
 QPushButton:hover {
-	background-color: rgb(57, 65, 80);
-	border: 2px solid rgb(61, 70, 86);
+	background-color: rgb(33, 155, 249);
+	border: 2px solid rgb(23, 145, 239);
 }
 QPushButton:pressed {	
-	background-color: rgb(35, 40, 49);
-	border: 2px solid rgb(43, 50, 61);
+	background-color: rgb(38, 159, 254);
+	border: 2px solid rgb(38, 159, 254);
 }</string>
            </property>
            <property name="text">
-            <string>Aceptar</string>
+            <string>Iniciar sesión</string>
            </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="cancel_button">
-           <property name="minimumSize">
-            <size>
-             <width>80</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>80</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="font">
-            <font>
-             <pointsize>9</pointsize>
-            </font>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">QPushButton {
-	border: 2px solid rgb(52, 59, 72);
-	border-radius: 5px;	
-	background-color: rgb(52, 59, 72);
-}
-QPushButton:hover {
-	background-color: rgb(57, 65, 80);
-	border: 2px solid rgb(61, 70, 86);
-}
-QPushButton:pressed {	
-	background-color: rgb(35, 40, 49);
-	border: 2px solid rgb(43, 50, 61);
-}</string>
-           </property>
-           <property name="text">
-            <string>Cancelar</string>
+           <property name="shortcut">
+            <string>Return</string>
            </property>
           </widget>
          </item>
