fixed roles name in user form

--- a/visuals/formUser.ui
+++ b/visuals/formUser.ui
@@ -322,12 +322,12 @@ QComboBox QAbstractItemView {
               </property>
               <item>
                <property name="text">
-                <string>Usuario</string>
+                <string>Operador</string>
                </property>
               </item>
               <item>
                <property name="text">
-                <string>Operador</string>
+                <string>Administrador</string>
                </property>
               </item>
              </widget>
